--- a/app/views/cares/show.html.erb
+++ b/app/views/cares/show.html.erb
@@ -8,8 +8,11 @@
       <dt>Light</dt>
       <dd><%= @care.light %></dd>
 
-      <dt>Temperature</dt>
-      <dd><%= @care.temperature %></dd>
+      <dt>Temp Min</dt>
+      <dd><%= @care.temp_min %></dd>
+
+      <dt>Temp Max</dt>
+      <dd><%= @care.temp_max %></dd>
 
       <dt>Water</dt>
       <dd><%= @care.water %></dd>
