--- a/app/views/plants/edit.html.erb
+++ b/app/views/plants/edit.html.erb
@@ -54,6 +54,42 @@
         <textarea id="highlights" name="highlights" placeholder="Highlights" class="form-control" rows="3"><%= @plant.highlights %></textarea>
       </div>
 
+      <!-- Label and input for officialname -->
+      <div class="form-group">
+        <label for="official_name" class="control-label">
+          Official Name
+        </label>
+
+        <textarea id="official_name" name="official_name" placeholder="Official Name" class="form-control" rows="3"><%= @plant.official_name %></textarea>
+      </div>
+
+      <!-- Label and input for Highlights -->
+      <div class="form-group">
+        <label for="highlights" class="control-label">
+          Highlights
+        </label>
+
+        <textarea id="highlights" name="highlights" placeholder="Highlights" class="form-control" rows="3"><%= @plant.highlights %></textarea>
+      </div>
+
+      <!-- Label and input for height -->
+      <div class="form-group">
+        <label for="height" class="control-label">
+          Height
+        </label>
+
+        <textarea id="height" name="height" placeholder="Height" class="form-control" rows="3"><%= @plant.height %></textarea>
+      </div>
+
+      <!-- Label and input for width -->
+      <div class="form-group">
+        <label for="width" class="control-label">
+          Width
+        </label>
+
+        <textarea id="width" name="width" placeholder="Width" class="form-control" rows="3"><%= @plant.width %></textarea>
+      </div>
+      
       <!-- Label and input for image -->
       <div class="form-group">
         <label for="image" class="control-label">
