--- a/app/views/plants/index.html.erb
+++ b/app/views/plants/index.html.erb
@@ -11,8 +11,10 @@
       <tr>
         <th>Name</th>
         <th>Description</th>
-        <th>Tip</th>
+        <th>Official Name</th>
         <th>Highlights</th>
+        <th>Height</th>
+        <th>Width</th>
         <th>Image</th>
         <th>Care</th>
         <th>Actions</th>
@@ -22,8 +24,10 @@
       <tr>
         <td><%= plant.name %></td>
         <td><%= plant.description %></td>
-        <td><%= plant.tip %></td>
+        <td><%= plant.official_name %></td>
         <td><%= plant.highlights %></td>
+        <td><%= plant.height %></td>
+        <td><%= plant.width %></td>
         <td><img src="<%= plant.image %>"  class="img-responsive"></td>
         <td><%= plant.care_id %></td>
         <td>
