--- a/app/views/plants/show.html.erb
+++ b/app/views/plants/show.html.erb
@@ -11,16 +11,22 @@
       <dt>Description</dt>
       <dd><%= @plant.description %></dd>
 
-      <dt>Tip</dt>
-      <dd><%= @plant.tip %></dd>
+      <dt>Official Name</dt>
+      <dd><%= @plant.officialname %></dd>
 
       <dt>Highlights</dt>
       <dd><%= @plant.highlights %></dd>
 
+      <dt>Height</dt>
+      <dd><%= @plant.height %></dd>
+
+      <dt>Width</dt>
+      <dd><%= @plant.width %></dd>
+
       <dt>Image</dt>
       <dd><img src="<%= @plant.id %>.jpg"></dd>
 
-      <dt>Care</dt>
+      <dt>Care ID</dt>
       <dd><%= @plant.care_id %></dd>
 
     </dl>
