--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,20 +41,9 @@
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
           <li><a href="/sills">My Sills</a></li>
-
-          <% if current_user.present? %>
-          <li>
-            <a href="/profile/<%= current_user.id %>">
-              <i class="fa fa-fw fa-user"></i>
-              <span class="hidden-sm">
-                My Profile
-              </span>
-            </a>
-          </li>
-          <% end %>
-
           <li><a href="/cares">Care Guides</a></li>
           <li><a href="/plants">Plants</a></li>
+          <li><a href="/users">Users</a></li>
           <li><a href="/rails/info">Sitemap</a></li>
         </ul>
 
