--- a/app/views/sills/index.html.erb
+++ b/app/views/sills/index.html.erb
@@ -10,16 +10,17 @@
     <table class="table table-striped table-hover">
       <tr>
         <th>Light type</th>
-        <th>Home temperature</th>
+        <th>Temperature Min</th>
+        <th>Temperature Max</th>
         <th>Height</th>
         <th>Width</th>
-        <th>Actions</th>
       </tr>
 
       <% @sills.each do |sill| %>
       <tr>
-        <td><%= sill.light_type %></td>
-        <td><%= sill.home_temperature_id %></td>
+        <td><%= sill.light %></td>
+        <td><%= sill.temp_min %></td>
+        <td><%= sill.temp_max %></td>
         <td><%= sill.height %></td>
         <td><%= sill.width %></td>
         <td>
