--- a/app/views/sills/new.html.erb
+++ b/app/views/sills/new.html.erb
@@ -30,16 +30,18 @@
       <!-- Label and input for home_temperature_id -->
       <div class="form-group">
         <label for="home_temperature_id" class="control-label">
-          Home temperature
+          Temperature at this location
         </label>
 
         <input type="text" id="home_temperature_id" name="home_temperature_id" placeholder="Home temperature" class="form-control" value="<%= @sill.home_temperature_id %>">
+        <%= select_tag(:home_temperature, options_from_collection_for_select(Profile.all, :id, @profile.home_temperature), :class => "form-control") %>
+
       </div>
 
       <!-- Label and input for height -->
       <div class="form-group">
         <label for="height" class="control-label">
-          Height
+          Space available for plant - Height
         </label>
 
         <input type="text" id="height" name="height" placeholder="Height" class="form-control" value="<%= @sill.height %>">
@@ -48,7 +50,7 @@
       <!-- Label and input for width -->
       <div class="form-group">
         <label for="width" class="control-label">
-          Width
+          Space available for plant - Width
         </label>
 
         <input type="text" id="width" name="width" placeholder="Width" class="form-control" value="<%= @sill.width %>">
