--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,31 +1,24 @@
-<div class="page-header">
-  <h3>User #<%= @user.id %></h3>
-</div>
-
 <div class="row">
-  <div class="col-md-12">
-    <dl class="dl-horizontal">
-      <dt>Availability</dt>
-      <dd><%= @user.availability %></dd>
+  <div class="col-md-8 col-md-offset-2">
+    <div class="jumbotron">
+      <h3>
+        <%= @user.username %>
+      </h3>
 
-      <dt>Home temperature</dt>
-      <dd><%= @user.home_temperature %></dd>
 
-      <dt>Fav color</dt>
-      <dd><%= @user.fav_color %></dd>
-
-    </dl>
-
-    <div class="btn-group btn-group-justified">
-      <a href="/users" class="btn btn-primary">
-        Back
-      </a>
-      <a href="/users/<%= @user.id %>/edit" class="btn btn-warning">
-        Edit
-      </a>
-      <a href="/delete_user/<%= @user.id %>" class="btn btn-danger" rel="nofollow">
-        Delete
-      </a>
     </div>
+
+
+<% if @user == current_user %>
+<div class="row">
+  <div class="col-md-8 col-md-offset-2">
+    <a href="/sills/new" class="btn btn-default btn-block">
+      <i class="fa fa-plus"></i>
+    </a>
+
+    <hr>
   </div>
 </div>
+<% end %>
+
+<%= render @user.sills   %>
