--- a/app/views/plants/index.html.erb
+++ b/app/views/plants/index.html.erb
@@ -16,8 +16,8 @@
         <th>Height</th>
         <th>Width</th>
         <th>Image</th>
-        <th>Care</th>
-        <th>Actions</th>
+        <th>Care ID</th>
+
       </tr>
 
       <% @plants.each do |plant| %>
