--- a/app/views/plants/new.html.erb
+++ b/app/views/plants/new.html.erb
@@ -36,25 +36,8 @@
         <textarea id="description" name="description" placeholder="Description" class="form-control" rows="3"><%= @plant.description %></textarea>
       </div>
 
-      <!-- Label and input for tip -->
-      <div class="form-group">
-        <label for="tip" class="control-label">
-          Tip
-        </label>
 
-        <textarea id="tip" name="tip" placeholder="Tip" class="form-control" rows="3"><%= @plant.tip %></textarea>
-      </div>
-
-      <!-- Label and input for highlights -->
-      <div class="form-group">
-        <label for="highlights" class="control-label">
-          Highlights
-        </label>
-
-        <textarea id="highlights" name="highlights" placeholder="Highlights" class="form-control" rows="3"><%= @plant.highlights %></textarea>
-      </div>
-
-      <!-- Label and input for officialname -->
+      <!-- Label and input for official_name -->
       <div class="form-group">
         <label for="official_name" class="control-label">
           Official Name
